Fixed text overflow in splash screen and UI panel at low resolutions and made spinner work in IE.

--- a/static/main.css
+++ b/static/main.css
@@ -199,7 +199,7 @@ nav ul li.highlight {
     top:0px;
     right:0px;
     height:100%;
-    width:30%;
+    width:20rem;
     background-color:white;
     padding:0.5rem;
 }
@@ -229,6 +229,7 @@ nav ul li.highlight {
     background-color:white;
     box-shadow:0px 0px 5px gray;
     z-index:100;
+    overflow:scroll;
 }
 
 #ecodash #general-info h1 {
@@ -419,13 +420,14 @@ nav ul li.highlight {
 #ecodash #ui #controls input[type=button] {
     height:28px;
     margin:2% 0% 2% 31%;
+    padding:5px;
     font-size:0.8rem;
     color:#333;
 }
 
 #ecodash #ui #controls ul {
     height:28px;
-    margin-left:10%;
+    margin:0% auto;
 }
 
 #ecodash #ui #controls ul li {
@@ -448,7 +450,7 @@ nav ul li.highlight {
 }
 
 #ecodash #ui #controls p#polygon {
-    margin-left:12%;
+    margin:0% auto;
     padding:5px;
     font-size:0.8rem;
     color:#333;
@@ -471,7 +473,7 @@ nav ul li.highlight {
     position:relative;
     width:200px;
     height:45px;
-    margin-left:20%;
+    margin:0% auto;
 }
 
 .range-slider p {
@@ -536,8 +538,18 @@ nav ul li.highlight {
     height:8rem;
     border-radius:4rem;
     border-bottom:1rem solid purple;
+    animation:sweep 1s infinite linear;
     -moz-animation:sweep 1s infinite linear;
     -webkit-animation:sweep 1s infinite linear;
+}
+
+@keyframes sweep {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
 }
 
 @-moz-keyframes sweep {
